feat: add DTO
