# backend/internal/interfaces/http/dto/action_response.go
@@ -1,0 +1,12 @@
+package dto
+
+import "github.com/isiyar/daily-energy/backend/internal/domain/models"
+
+type ActionResponse struct {
+	Id           string            `json:"id"`
+	Utgid        int               `json:"utgid"`
+	Date         int64             `json:"date"`
+	ActivityName string            `json:"activity_name"`
+	Calories     int               `json:"calories"`
+	Type         models.ActionType `json:"type"`
+}
